tests/NormalTests/paczka1/small_fuzzy/53181575.err
Error in line 1: GuPw4kCIOx A406 88,0
Error in line 2: GuPw4kCIOx A375 71,0
Error in line 6: J4JFmg S795 47,0
Error in line 7: J4JFmg A375 29,4
